--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
     "pinia": "^2.0.32",
+    "swiper": "^9.1.0",
     "vee-validate": "^4.7.4",
     "vue": "^3.2.47",
     "vue-awesome-paginate": "^1.1.46",
